test/corpus/exprs.txt
======================
Parses example 2
======================

{
  person1: {
    name: "Alice",
    welcome: "Hello " + self.name + "!",
  },
  person2: self.person1 { name: "Bob" },
}

---

(document
  (expr
    (member
      (field
        (fieldname
          (id))
        (expr
          (member
            (field
              (fieldname
                (id))
              (expr
                (string
                  (string_start)
                  (string_content)
                  (string_end)))))
          (member
            (field
              (fieldname
                (id))
              (expr
                (expr
                  (expr
                    (string
                      (string_start)
                      (string_content)
                      (string_end)))
                  (binaryop)
                  (expr
                    (expr
                      (self))
                    (id)))
                (binaryop)
                (expr
                  (string
                    (string_start)
                    (string_content)
                    (string_end)))))))))
    (member
      (field
        (fieldname
          (id))
        (expr
          (expr
            (expr
              (self))
            (id))
          (member
            (field
              (fieldname
                (id))
              (expr
                (string
                  (string_start)
                  (string_content)
                  (string_end))))))))))

=================================
should parse basic call foo(1,2)
=================================

{
  x1: foo(1,2)
}

---

(document
  (expr
     (member (field (fieldname (id))
       	       (expr (expr (id))
	       	     (args (expr (number))
		           (expr (number))))))))

=================================
should parse basic call foo(1,2,3)
=================================

{
  x1: foo(1,2,3)
}

---

(document
  (expr
     (member (field (fieldname (id))
       	       (expr (expr (id))
	       	     (args (expr (number))
		           (expr (number))
			   (expr (number))
			   ))))))

=================================
should parse tailstrict
=================================

{
  x1: foo(1,2,3) tailstrict
}

---

(document
  (expr
     (member (field (fieldname (id))
       	       (expr (expr (id))
	       	     (args (expr (number))
		           (expr (number))
			   (expr (number))
			   ))))))
